kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: lpdet
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: license-plate-detection.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /(.*)
        backend:
          service:
            name: django-svc
            port: 
              number: 8098
      - pathType: ImplementationSpecific
        path: /static/(.*)
        backend:
          service:
            name: static-svc
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /media/(.*)
        backend:
          service:
            name: static-svc
            port: 
              number: 80
  - host: rabbitmq.license-plate-detection.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /(.*)
        backend:
          service:
            name: rabbitmq
            port: 
              number: 15672
